@@ -162,7 +162,7 @@ defaults = list(
   formDrift = .3,
   formDisp = .2,
   pitchDriftDep = .5,
-  pitchDriftFreq = .125,
+  pitchDriftFreq = .04,
   amplDriftDep = 5,
   subDriftDep = 4,
   rolloffDriftDep = 3,
